--- a/package.json
+++ b/package.json
@@ -14,6 +14,10 @@
   "scripts": {
     "start": "node ./bin/index.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/MarcosLabra/randomNumberNPM"
+  },
   "author": "Marcos Labra",
   "license": "MIT"
 }
